# WhaleFlow

./: .gitignore  README.md  pyproject.toml  scan_config.toml
.github/workflows/: weekly_update.yml
reports/: scan_20260320.csv
tests/: conftest.py
tests/e2e/: test_finmind_live.py
tests/integration/: test_tdcc_service.py
tests/unit/: test_date_utils.py  test_stock_service.py  test_tdcc_accumulation.py  test_tdcc_scraper.py
whaleflow/: __main__.py  config.py
whaleflow/dashboard/: app.py  charts.py  config_reader.py  data_loader.py
whaleflow/dashboard/pages/: 1_scan_results.py  2_stock_trend.py
whaleflow/db/: engine.py  migrations.py  models.py
whaleflow/fetchers/: base.py  finmind.py  price.py  rate_limiter.py  tdcc_api.py  tdcc_scraper.py  tpex.py  twse.py
whaleflow/services/: institutional_service.py  stock_service.py  tdcc_service.py
whaleflow/strategy/: price_filter.py  tdcc_trend.py
whaleflow/utils/: date_utils.py  logging.py
