[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whaleflow"
version = "0.1.0"
description = "台灣集保分佈大戶追蹤選股系統"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "streamlit>=1.35",
    "plotly>=5.20",
    "pandas>=2.2",
]

[project.scripts]
whaleflow = "whaleflow.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: mark test as end-to-end (requires real API, skipped in CI)",
]
addopts = "--cov=whaleflow --cov-report=term-missing -v"

[tool.coverage.run]
omit = ["tests/*", "whaleflow/dashboard/*"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "respx (>=0.22.0,<0.23.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
